fix quill css in dark mode

--- a/frontend/src/components/ui/editor/editor.css
+++ b/frontend/src/components/ui/editor/editor.css
@@ -3,7 +3,7 @@
     border-left: none;
     border-right: none;
     border-bottom: 1px solid var(--color-border);
-    height: 3rem;
+    min-height: 3rem;
 }
 
 .ql-container.ql-snow {
@@ -13,5 +13,27 @@
 .ql-snow .ql-tooltip input[type=text] {
     border: 1px solid var(--color-border);
     background-color: var(--color-bg);
-    color: var(--color-text);
+    color: var(--color-fg);
+}
+
+.ql-snow .ql-stroke,
+.ql-snow .ql-fill {
+    stroke: var(--color-fg);
+}
+
+.ql-snow .ql-picker {
+    color: var(--color-fg);
+}
+
+.ql-snow .ql-picker-options {
+    background-color: var(--color-bg);
+}
+
+.ql-toolbar.ql-snow .ql-picker.ql-expanded .ql-picker-options,
+.ql-toolbar.ql-snow .ql-picker.ql-expanded .ql-picker-label {
+    border-color: var(--color-border);
+}
+
+.ql-editor.ql-blank::before {
+    color: var(--color-muted-foreground)
 }
